api_versioned_docs/version-12.1.5/avalonia/media/textformatting/index.mdx
---
title: 'Avalonia.Media.TextFormatting'
hide_title: true
slug: '/avalonia/media/textformatting'
uid: 'Avalonia.Media.TextFormatting'
commentId: 'N:Avalonia.Media.TextFormatting'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Media.TextFormatting'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TextFormatting Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Media.TextFormatting`

</div>

## Types

- [DrawableTextRun](drawabletextrun.mdx) - A text run that supports drawing content.
- [GenericTextParagraphProperties](generictextparagraphproperties.mdx) - Generic implementation of [Avalonia.Media.TextFormatting.TextParagraphProperties](xref:Avalonia.Media.TextFormatting.TextParagraphProperties).
- [GenericTextRunProperties](generictextrunproperties.mdx) - Generic implementation of [TextRunProperties](xref:Avalonia.Media.TextFormatting.TextRunProperties)
- [GlyphInfo](glyphinfo.mdx) - Represents a single glyph.
- [ITextSource](itextsource.mdx) - Produces [Avalonia.Media.TextFormatting.TextRun](xref:Avalonia.Media.TextFormatting.TextRun) objects that are used by the [Avalonia.Media.TextFormatting.TextFormatter](xref:Avalonia.Media.TextFormatting.TextFormatter).
- [JustificationProperties](justificationproperties.mdx)
- [LogicalDirection](logicaldirection.mdx)
- [ShapedBuffer](shapedbuffer.mdx)
- [ShapedTextRun](shapedtextrun.mdx) - A text run that holds shaped characters.
- [SplitResult&lt;T&gt;](splitresult-1.mdx)
- [TextBounds](textbounds.mdx) - The bounding rectangle of a range of characters
- [TextCharacters](textcharacters.mdx) - A text run that holds text characters.
- [TextCollapsingProperties](textcollapsingproperties.mdx) - Properties of text collapsing.
- [TextEndOfLine](textendofline.mdx) - A text run that indicates the end of a line.
- [TextEndOfParagraph](textendofparagraph.mdx) - A text run that indicates the end of a paragraph.
- [TextFormatter](textformatter.mdx) - Represents a base class for text formatting.
- [TextLayout](textlayout.mdx) - Represents a multi line text layout.
- [TextLeadingPrefixCharacterEllipsis](textleadingprefixcharacterellipsis.mdx) - Ellipsis based on a fixed length leading prefix and suffix growing from the end at character granularity.
- [TextLine](textline.mdx) - Represents a line of text that is used for text rendering.
- [TextLineBreak](textlinebreak.mdx)
- [TextLineMetrics](textlinemetrics.mdx) - Represents a metric for a [Avalonia.Media.TextFormatting.TextLine](xref:Avalonia.Media.TextFormatting.TextLine) objects,
that holds information about ascent, descent, line gap, size and origin of the text line.
- [TextMetrics](textmetrics.mdx) - A metric that holds information about text specific measurements.
- [TextParagraphProperties](textparagraphproperties.mdx) - Provides a set of properties that are used during the paragraph layout.
- [TextRun](textrun.mdx) - Represents a portion of a [Avalonia.Media.TextFormatting.TextLine](xref:Avalonia.Media.TextFormatting.TextLine) object.
- [TextRunBounds](textrunbounds.mdx) - The bounding rectangle of text run
- [TextRunCache](textruncache.mdx) - Caches shaped text runs and bidi processing results to avoid redundant shaping
when only the paragraph width constraint changes (e.g., between Measure and Arrange).
- [TextRunProperties](textrunproperties.mdx) - Provides a set of properties, such as typeface or foreground brush, that can be applied to a [TextRun](xref:Avalonia.Media.TextFormatting.TextRun) object. This is an abstract class.
- [TextShaper](textshaper.mdx) - A class that is responsible for text shaping.
- [TextShaperOptions](textshaperoptions.mdx) - Options to customize text shaping.
- [TextTrailingCharacterEllipsis](texttrailingcharacterellipsis.mdx) - A collapsing properties to collapse whole line toward the end
at character granularity.
- [TextTrailingWordEllipsis](texttrailingwordellipsis.mdx) - a collapsing properties to collapse whole line toward the end
at word granularity.
- [UnshapedTextRun](unshapedtextrun.mdx) - A group of characters that can be shaped.
</ApiRefPage>

